<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textSize="32sp"
                android:textColor="#ff0000"
                android:textAlignment="center"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:baselineAligned="false"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/releaseDate"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Date"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:baselineAligned="false">

                    <TextView
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Ratings"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/vote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Ratings"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginStart="18dp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"/>

            <TextView
                android:id="@+id/viewlang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/Language"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Overview"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginStart="18dp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:paddingBottom="200dp"
                android:textColor="#fff"
                android:text="@string/Overview"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>